WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146138
Get CAContext directly for CALayer instead of walking the layer tree.
https://bugs.webkit.org/show_bug.cgi?id=146138
Summary
Get CAContext directly for CALayer instead of walking the layer tree.
Jeremy Jones
Reported
2015-06-18 21:18:44 PDT
Get CAContext directly for CALayer instead of walking the layer tree.
Attachments
Patch
(3.31 KB, patch)
2015-06-18 21:21 PDT
,
Jeremy Jones
darin
: review+
Details
Formatted Diff
Diff
Patch for landing.
(3.54 KB, patch)
2015-06-19 11:33 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2015-06-18 21:19:16 PDT
rdar://problem/21455378
Jeremy Jones
Comment 2
2015-06-18 21:21:37 PDT
Created
attachment 255169
[details]
Patch
Simon Fraser (smfr)
Comment 3
2015-06-19 08:19:30 PDT
Comment on
attachment 255169
[details]
Patch I can't review this without some more explanation in the changelog.
Darin Adler
Comment 4
2015-06-19 11:25:04 PDT
Comment on
attachment 255169
[details]
Patch Seems clearly more efficient and straightforward. Does it also fix any bugs? Can we make a regression test for the bugs it fixes?
Jeremy Jones
Comment 5
2015-06-19 11:32:44 PDT
(In reply to
comment #4
)
> Comment on
attachment 255169
[details]
> Patch > > Seems clearly more efficient and straightforward. Does it also fix any bugs? > Can we make a regression test for the bugs it fixes?
I don't know of any concrete failures that this fixes, only the hunch that the convoluted approach might fail where the direct approach would succeed.
Jeremy Jones
Comment 6
2015-06-19 11:33:43 PDT
Created
attachment 255203
[details]
Patch for landing.
Jeremy Jones
Comment 7
2015-06-19 11:34:06 PDT
(In reply to
comment #3
)
> Comment on
attachment 255169
[details]
> Patch > > I can't review this without some more explanation in the changelog.
Added more explanation.
WebKit Commit Bot
Comment 8
2015-06-19 12:29:36 PDT
Comment on
attachment 255203
[details]
Patch for landing. Clearing flags on attachment: 255203 Committed
r185763
: <
http://trac.webkit.org/changeset/185763
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug