Get CAContext directly for CALayer instead of walking the layer tree. https://bugs.webkit.org/show_bug.cgi?id=146138 <rdar://problem/21455974>

Patch by Jeremy Jones <jeremyj@apple.com> on 2015-06-19
Reviewed by Darin Adler.

This will get the context directly from the CALayer instead of getting all CAContexts, walking the layer tree
to the root and comparing that against each CAContext's root layer.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::setVideoFullscreenLayer):

Canonical link: https://commits.webkit.org/164206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185763 268f45cc-cd09-0410-ab3c-d52691b4dbfc