Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm
@@ -1105,38 +1105,25 @@ void MediaPlayerPrivateAVFoundationObjC::setVideoFullscreenLayer(PlatformLayer* 
     [CATransaction begin];
     [CATransaction setDisableActions:YES];
     
-    CALayer *oldRootLayer = videoFullscreenLayer;
-    while (oldRootLayer.superlayer)
-        oldRootLayer = oldRootLayer.superlayer;
-
-    CALayer *newRootLayer = nil;
+    CAContext *oldContext = [m_videoLayer context];
+    CAContext *newContext = nil;
     
     if (m_videoFullscreenLayer && m_videoLayer) {
         [m_videoLayer setFrame:CGRectMake(0, 0, m_videoFullscreenFrame.width(), m_videoFullscreenFrame.height())];
         [m_videoLayer removeFromSuperlayer];
         [m_videoFullscreenLayer insertSublayer:m_videoLayer.get() atIndex:0];
-        newRootLayer = m_videoFullscreenLayer.get();
+        newContext = [m_videoFullscreenLayer context];
     } else if (m_videoInlineLayer && m_videoLayer) {
         [m_videoLayer setFrame:[m_videoInlineLayer bounds]];
         [m_videoLayer removeFromSuperlayer];
         [m_videoInlineLayer insertSublayer:m_videoLayer.get() atIndex:0];
-        newRootLayer = m_videoInlineLayer.get();
+        newContext = [m_videoInlineLayer context];
     } else if (m_videoLayer)
         [m_videoLayer removeFromSuperlayer];
 
-    while (newRootLayer.superlayer)
-        newRootLayer = newRootLayer.superlayer;
-
-    if (oldRootLayer && newRootLayer && oldRootLayer != newRootLayer) {
-        mach_port_t fencePort = 0;
-        for (CAContext *context in [CAContext allContexts]) {
-            if (context.layer == oldRootLayer || context.layer == newRootLayer) {
-                if (!fencePort)
-                    fencePort = [context createFencePort];
-                else
-                    [context setFencePort:fencePort];
-            }
-        }
+    if (oldContext && newContext && oldContext != newContext) {
+        mach_port_t fencePort = [oldContext createFencePort];
+        [newContext setFencePort:fencePort];
         mach_port_deallocate(mach_task_self(), fencePort);
     }
     [CATransaction commit];
